# securum-exire

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linter.yml
example/: README.md  backend.config.yaml  traefik.yaml
securum_exire/src/: main.rs
securum_exire_server/: .gitignore  Cargo.toml
securum_exire_server/src/: config.rs  init.rs  main.rs  watcher.rs
securum_exire_server/src/cmd/: mod.rs
securum_exire_server/src/leak_model/: mod.rs
securum_exire_server/src/route/: block_endpoint.rs  check_endpoint_status.rs  check_leak.rs  get_all_blocked.rs  mod.rs  register_signal_server.rs  unblock_endpoint.rs
securum_exire_server/src/utils/: mod.rs
securum_exire_sever/: .gitignore  Cargo.toml  securum.toml  securum.toml.example
securum_exire_sever/src/: config.rs  init.rs  main.rs  watcher.rs
securum_exire_sever/src/cmd/: mod.rs
securum_exire_sever/src/leak_model/: mod.rs
securum_exire_sever/src/route/: block_endpoint.rs  check_leak.rs  mod.rs
securum_exire_sever/src/utils/: mod.rs
src/: main.rs
