[package]
name = "securum_exire"
version = "0.1.0"
authors = ["mayankk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
simple-error = "0.2.3"
clap = "3.0.0-beta.2"