[package]
name = "securum_exire_sever"
version = "0.1.0"
authors = ["Mayank Kumar <mayank22oct@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
env_logger = "0.8.3"
serde_json = "1.0.64"
hotwatch = "0.4.5"
futures-util = "0.3.13"
tokio = "1.4.0"
futures = "0.3.13"